DERBY-5488: Eliminate needless Boolean object creation.
git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1201025 13f79535-47bb-0310-9956-ffa450edef68