@@ -1657,7 +1657,7 @@ public class SelectNode extends ResultSetNode
                 topList,
                 offset,
                 fetchFirst,
-                new Boolean( hasJDBClimitClause ),
+                Boolean.valueOf( hasJDBClimitClause ),
                 getContextManager());
         }
 
